--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+        body{
+            background-color: #bdb9b9;
+        }
 
         h1{
             text-align: center;
@@ -36,6 +39,13 @@
 
         #carrito h3 {
             margin-bottom: 12px;
+            text-align: center;
+        }
+
+        #productosCarrito {
+            display: flex;
+            flex-direction: column;
+            justify-self: center;
         }
 
         #productosCarrito .producto {
@@ -55,6 +65,17 @@
 
         .botonesEliminar:hover {
             background-color: #cc0000;
+        }
+
+        #boton-comprar {
+            background-color: #1acc5e;
+            color: white;
+            border: none;
+            padding: 4px 8px;
+            border-radius: 4px;
+            cursor: pointer;
+            display: flex;
+            justify-self: center;
         }
 
         /* Estilo para la lista de productos */
@@ -119,4 +140,9 @@
 
         .botonesCompra:hover {
             background-color: #0056b3;
+        }
+
+        #total {
+            text-align: center;
+            padding: 10px;
         }
